--- a/style.css
+++ b/style.css
@@ -176,3 +176,12 @@ td, th {
 .beneficios-imgagem{
     width: 60%;
 }
+
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
