--- a/style.css
+++ b/style.css
@@ -173,7 +173,30 @@ td, th {
     margin: 0 20px 20px 0;
 }
 
-.beneficios-imgagem{
+.beneficios {
+    padding: 3em 0;
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+
+}
+
+.itens:first-child{
+    font-weight: bold;
+} 
+
+.beneficios-imagem{
     width: 60%;
 }
 
@@ -188,5 +211,6 @@ td, th {
 
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
+
 }
