adicionando responsividade ao index

--- a/style.css
+++ b/style.css
@@ -207,8 +207,8 @@ td, th {
 .beneficios-imagem{
     width: 60%;
     opacity: 1;
-    transition: 400ms ;
-
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 #000000;
 }
 
 .beneficios-imagem:hover{
@@ -234,4 +234,22 @@ td, th {
     width: 560px;
     margin: 2em auto;
 
+}
+
+@media screen and ( max-width: 480px){
+   .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+       width: auto;
+   }
+
+   h1{
+       text-align: center;
+   }
+
+   nav {
+       position: static;
+   }
+
+   .lista-beneficios, .beneficios-imagem{
+       width: 100%;
+   }
 }
